--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>JS Form Validation</title>
   <link rel="stylesheet" href="https://unpkg.com/mvp.css">
-
 
 </head>
 
